fix: prevent writer name from breaking into vertical layout using white-space nowrap

--- a/03-maincamp-triptalk/03-CNA/src/components/boards-detail/comment-list/styles.module.css
+++ b/03-maincamp-triptalk/03-CNA/src/components/boards-detail/comment-list/styles.module.css
@@ -56,6 +56,7 @@
   font-style: normal;
   font-weight: 300;
   line-height: 20px;
+  white-space: nowrap;
 }
 
 .stars {
